--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <java.version>1.8</java.version>
         <spring-cloud.version>Greenwich.SR1</spring-cloud.version>
         <docker.image.name>ray0728/resourceserv</docker.image.name>
-	<docker.image.tag>${env.BUILD_NAME}/docker.image.tag>
+	<docker.image.tag>${env.BUILD_NAME}</docker.image.tag>
     </properties>
 
     <dependencies>
